responsive-web-design/product-landing-page/styles/styles.css
:root {
    --primary-clr: #0098FF;
}

/***********************
 *    GLOBAL STYLES    *
 ***********************/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
}

body {
    min-height: 100vh;
    font-family: sans-serif;
    font-size: 1.6rem;
}

main {
    margin-top: 80px;
}

h3 {
    font-size: 3.6rem;
    text-align: center;
    margin-bottom: 4rem;
}

p {
    line-height: 1.5;
}

/***********************
 *    HEADER STYLES    *
 ***********************/

#header {
    position: fixed;
    top: 0;
    height: 80px;
    width: 100%;
    overflow: hidden;
    background: white;
    z-index: 2;
}

#header-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 30px;
    padding-right: 30px;
}

.header__logo {
    display: flex;
    align-items: center;
    gap: 1rem;
}

#header-img {
    max-height: 5rem;
}

.header__title {
    font-size: 4.2rem;
    font-family: "Roboto Slab";
}

#nav-bar {
    font-size: 1.8rem;
}

.nav-link {
    color: #333;
    text-decoration: none;
    margin-right: 20px;
}

.nav-link:last-child {
    margin-right: 0;
}

.nav-link:hover {
    font-weight: bold;
    text-decoration: 2px underline black;
}

/***********************
 *    BANNER STYLES    *
 ***********************/

.banner {
    display: grid;
    height: 2%;
    place-items: center;
    position: relative;
}

.banner__img {
    grid-area: 1 / 1 / 1 / 1;
    height: 40vw;
    width: 100%;
    object-fit: cover;
    object-position: center;
}

.banner__text {
    grid-area: 1 / 1 / 1 / 1;
    position: absolute;
    right: 20vw;
    background: hsla(0, 0%, 100%, .6);
    border: 5px solid black;
    padding: 10px;
}

.banner__title {
    text-transform: uppercase;
    font-size: 7vw;
    font-weight: 700;
}

/***********************
 * EXPERIENCES SECTION *
 ***********************/

#experiences {
    margin-top: 40px;
    margin-bottom: 40px;
    padding: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.experiences__grid {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 5rem;
    width: 90%;
}

.grid__item {
    /*border: 1px solid hsla(0,0%,0%,1);*/
    flex: 1 1 500px;
    display: flex;
    flex-direction: column;
    box-shadow: 0 0 5px hsla(0,0%,0%,.7);
}

.item__img {
    width: 100%;
    object-position: center;
}

.item__text {
    font-size: 2.8rem;
    padding: 20px;
    text-align: center;
    line-height: 1.5;
    color: rgb(73, 73, 73);
}

#experiences:target {
    padding-top: 90px;
}

/***********************
 *     VIDEO STYLES    *
 ***********************/

 #tips {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 80px;
 }

 #tips::before {
     content: "";
     height: 2px;
     width: 90vw;
     background: linear-gradient(90deg, hsla(0,0%,50%,0), hsla(0,0%,50%,.5), hsla(0,0%,50%,0));
     margin-top: 50px;
     margin-bottom: 100px;
 }

 #tips > .text-wrapper {
     text-align: center;
     width: 80vw;
 }

 .tips__title {
     margin-bottom: 5px;
 }

 .tips__text {
     font-size: 2rem;
     color:rgb(73, 73, 73);
 }

#tips > .video-wrapper {
    margin-top: 20px;
 }

 #video {
     max-width: 1120px;
     max-height: 630px;
 }

 /***********************
 *    PRICING STYLES    *
 ***********************/

 #packages {
    margin-top: 40px;
    margin-bottom: 40px;
 }

 #packages::before {
    display: inline-block;
    content: "";
    height: 2px;
    width: 90vw;
    background: linear-gradient(90deg, hsla(0,0%,50%,0), hsla(0,0%,50%,.5), hsla(0,0%,50%,0));
    margin-top: 50px;
    margin-bottom: 100px;
}

 .package__grid {
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
    justify-content: space-around;
 }

 .package__card {
    flex-shrink: 1;
    border: 2px solid hsla(0, 0%, 50%, .5);
    padding: 20px;
 }

 .package__title,
 .package__price,
 .package__text {
    text-align: center;
 }

 .package__title {
    margin-bottom: 10px;
 }

 .package__price {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.2rem;
    margin-bottom: 10px;
    color: #333;
 }

 .package__price > span {
    font-size: 3.2rem;
    margin-right: 8px;
    color: #000;
 }

 .package__text {
    font-size: 1.6rem;
 }

 li.package {
    list-style-type: none;
    font-size: 1.6rem;
    line-height: 1.5;
 }

 li.package::before {
    margin-right: 5px;
 }

 li.checked::before {
    content: "\2714";
    color: green;
 }

 li.unchecked::before {
    content: "\2716";
    color: red;
 }

/***************************
 *    NEWSLETTER STYLES    *
 ***************************/

 #newsletter {
     display: grid;
     justify-content: center;
     margin-top: 100px;
     margin-bottom: 50px;
 }

 #newsletter > p {
     text-align: center;
     font-size: 2rem;
     text-transform: uppercase;
     font-weight: 700;
 }

 #form {
     display: flex;
     justify-content: center;
     margin-top: 10px;
 }

 #form input {
     font-size: 1.6rem;
     padding: 10px;
 }

 #email {
     flex: 1 0 50%;
     border-radius: 0px !important;
     border-top: 2px solid hsla(0, 0%, 70%, .6);
     border-left: 2px solid hsla(0, 0%, 70%, .6);
     border-bottom: 2px solid hsla(0, 0%, 70%, .6);
     border-right: none;
 }

 #submit {
     flex: 1 0 20%;
     border: none;
     background: dodgerblue;
     color: white;
     transition: .5s;
 }

 #submit:hover {
    background: #005494;
}

 /* styling taken from webaim as the recommended rules for visually hiding labels*/
 .hidden {
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow:hidden;
 }

/***********************
 *    FOOTER STYLES    *
 ***********************/

 footer {
    background: hsla(0, 0%, 96%, 1);
    height: 70px;
    width: 100%;
    display: grid;
    place-items: center;
    font-size: 1.6rem;
 }

 /***********************
 *     MEDIA QUERIES    *
 ***********************/

 @media (max-width: 700px) {
    #header {
        height: auto;
    }
    #header-wrapper {
        flex-direction: column;
        gap: 10px;
        padding-left: 10px;
        padding-right: 10px;
    }
    .nav-link {
        margin-right: 10px;
    }
    #experiences:target {
        padding-top: 106px;
    }
}

@media (max-width: 500px) {
    #nav-bar {
        font-size: 1.6rem;
    }
}

 /* Limit banner height */
 @media (max-width: 800px) {
    .banner__img {
        height: 60vw;
    }
 }

 /* To ensure larger sizes include whitespace left and right of player */
 @media(min-width: 800px) {
    #video {
        width: calc(100vw * .8);
        height: calc(56.25vw * .8);
    }
 }

 /* For mobile phone screen sizes */
 @media(max-width: 600px) {
     h3 {
        font-size: 2.6rem;
     }

    .banner__img {
        height: 50vh;
    }
    #experiences {
        padding: 20px;
    }
    .item__text {
        font-size: 2.2rem;
    }
    #video {
        width: 100vw;
        height: 56.25vw; /* found this trick on StackOverflow to keep the aspect ratio without explicit pixel values */
    }
    #tips::before {
        margin-top: 0;
        margin-bottom: 50px;
    }
    #packages::before {
        margin-top: 0;
        margin-bottom: 50px;
    }
 }

